css/style.css
/* ... */
.c-btn--action {
  background: #1f2949;
  background-image: -webkit-gradient(linear, left top, right top);
  /* background-image: -webkit-linear-gradient(left, #ff5782 0%, #fd8596 51%, #ff5782 100%);
  background-image: -o-linear-gradient(left, #ff5782 0%, #fd8596 51%, #ff5782 100%);
  background-image: linear-gradient(to right, #ff5782 0%, #fd8596 51%, #ff5782 100%); */
  background-size: 200% auto;
  color: #fff;
}
.c-btn--action:hover,
.c-btn--action:focus {
  background-position: right center;
  color: #fff;
}

/* --------------------------------
BOOTSTRAP OVERWRITE CSS
-------------------------------- */
.navbar-default {
  background: transparent;
  padding: 25px 0;
  border: none;
  margin-bottom: 0;
}

.navbar-brand {
  padding-top: 0;
  padding-bottom: 0;
  line-height: 1.4;
}
.navbar-brand > img {
  width: 200px;
  max-width: initial;
  max-height: 100%;
}
.navbar-brand .amip-logo{
  width: 30px !important;
}
.amip-span-bold{
  color: #fff;
  font-family: "Nunito Sans", sans-serif;
  font-weight: 900 !important;
  font-size: 22px;
}
.amip-span{
  color: #fff;
  font-family: "Nunito Sans", sans-serif;
  font-size: 22px;
}

.navbar-nav {
  padding: 0;
}

.nav > li > a {
  font-size: 14px;
  font-weight: 600;
  text-transform: uppercase;
  padding: 10px 2px;
  margin: 0 14px;
}

.navbar-default .navbar-nav > li > a {
  color: #fff;
  opacity: 0.75;
  -webkit-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}
.navbar-default .navbar-nav > li > a:focus,
.navbar-default .navbar-nav > li > a:hover {
  color: inherit;
  opacity: 1;
}
.navbar-default .navbar-nav > li > a::after {
  content: "";
  position: absolute;
  left: 2px;
  bottom: 8px;
  width: 1px;
  height: 2px;
  background: #fff;
  border-radius: 4px;
  opacity: 0;
  -webkit-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}
.navbar-default .navbar-nav > li > a.-register {
  opacity: 1;
  padding-left: 18px;
  padding-right: 18px;
  -webkit-box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.3);
  box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.3);
  border-radius: 4px;
}
.navbar-default .navbar-nav > li > a.-register:hover {
  background-color: rgba(255, 255, 255, 0.3);
}
.navbar-default .navbar-nav > li > a.-register::after {
  display: none;
}
.navbar-default .navbar-nav > li > a.-login {
  background-color: rgba(0, 0, 0, 0.2);
  opacity: 1;
  padding-left: 18px;
  padding-right: 18px;
  border-radius: 4px;
}
.navbar-default .navbar-nav > li > a.-login:hover {
  background-color: rgba(0, 0, 0, 0.4);
}
.navbar-default .navbar-nav > li > a.-login::after {
  display: none;
}

.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:focus,
.navbar-default .navbar-nav > .active > a:hover {
  background: transparent;
  color: #fff;
  opacity: 0.75;
}


.navbar-default .navbar-nav > li > a:hover::after {
  width: 12px;
  opacity: 1;
}

.navbar-default .navbar-toggle {
  border: none;
}

.navbar-default .navbar-toggle .icon-bar {
  background-color: #fff;
}

.navbar-default .navbar-toggle:focus,
.navbar-default .navbar-toggle:hover {
  background: none;
}

.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
  border: none;
}

.navbar-fixed-bottom .navbar-collapse,
.navbar-fixed-top .navbar-collapse {
  max-height: initial;
}

.form-group {
  margin-bottom: 28px;
}

input.form-control {
  height: 40px;
}

.pagination > li > a,
.pagination > li > span {
  width: 34px;
  height: 34px;
  line-height: 32px;
  background-color: #f5f9fe;
  color: #4a4545;
  font-size: 13px;
  padding: 0;
  border-color: #f5f9fe;
  border-radius: 4px;
  margin-left: 12px;
}

.pagination > li > a:focus,
.pagination > li > a:hover,
.pagination > li > span:focus,
.pagination > li > span:hover {
  background-color: #ecf3fc;
  color: #4a4545;
  border-color: #ecf3fc;
}

.pagination > .active > a,
.pagination > .active > a:focus,
.pagination > .active > a:hover,
.pagination > .active > span,
.pagination > .active > span:focus,
.pagination > .active > span:hover {
  background: #457fca;
  border-color: #457fca;
  color: #fff;
}

/* --------------------------------
HEADER CSS
-------------------------------- */
#header {
  position: relative;
  color: #fff;
}

.nav-fixed-bg {
  background: #457fca;
  background: -webkit-linear-gradient(to right, #457fca, #5691c8);
  background: -webkit-gradient(linear, left top, right top, from(#457fca), to(#5691c8));
  background: -webkit-linear-gradient(left, #457fca, #5691c8);
  background: -o-linear-gradient(left, #457fca, #5691c8);
  background: linear-gradient(to right, #457fca, #5691c8);
  -webkit-box-shadow: 0 3px 35px rgba(0, 0, 0, 0.12);
  box-shadow: 0 3px 35px rgba(0, 0, 0, 0.12);
  opacity: 0.95;
}

.header__img {
  background-size: cover;
  background-size: 99.9%;
  background-attachment: fixed;
  background-repeat: no-repeat;
}

.header__video {
  overflow: hidden;
}

.header__scroll {
  position: absolute;
  bottom: -1px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

/* --------------------------------
HERO SECTION CSS
-------------------------------- */
.hero {
  position: relative;
  padding: 210px 0 60px;
  height: 700px;
}
.hero__info {
  max-width: 550px;
  color: #fff;
  padding-top: 55px;
}
.hero__info h2 {
  font-size: 2.8125rem;
  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.12);
  line-height: 55px;
}
.hero__info p {
  padding: 20px 0 35px;
}
.hero__download a {
  margin-right: 16px;
  -webkit-box-shadow: 0px 10px 26px rgba(0, 0, 0, 0.12);
  box-shadow: 0px 10px 26px rgba(0, 0, 0, 0.12);
}
/* ... */

